# ants

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: Ant.cpp  Ant.h  Id.cpp  Id.h  MovementStrategy.cpp  MovementStrategy.h  Pheromone.h  Position.h  Tile.cpp  Tile.h  Timer.cpp  Timer.h  Vector2D.h  Visualizer.cpp  Visualizer.h  World.cpp  World.h  main.cpp  rng.h
